--- a/KakaoLogin/Info.plist
+++ b/KakaoLogin/Info.plist
@@ -2,6 +2,32 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>AppKey</string>
+			</array>
+		</dict>
+		<dict><key>LSApplicationQueriesSchemes</key>
+            <array>
+                <!-- 카카오톡으로 로그인 -->
+                <string>kakaokompassauth</string>
+                <!-- 카카오링크 -->
+                <string>kakaolink</string>
+            </array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakaoAppKey://oauth</string>
+			</array>
+		</dict>
+	</array>
+    
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
