--- a/KakaoLogin/Info.plist
+++ b/KakaoLogin/Info.plist
@@ -9,25 +9,23 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>AppKey</string>
+				<string>kakaoKakaoKey</string>
 			</array>
 		</dict>
-		<dict><key>LSApplicationQueriesSchemes</key>
-            <array>
-                <!-- 카카오톡으로 로그인 -->
-                <string>kakaokompassauth</string>
-                <!-- 카카오링크 -->
-                <string>kakaolink</string>
-            </array>
+		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>kakaoAppKey://oauth</string>
+				<string>kakaoKakaoKey://oauth</string>
+			</array>
+			<key>LSApplicationQueriesSchemes</key>
+			<array>
+				<string>kakaokompassauth</string>
+				<string>kakaolink</string>
 			</array>
 		</dict>
 	</array>
-    
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
